# hrassist

./: Makefile  README.md  environment.yaml  pyproject.toml  requirements.txt
hrassist/: main.py  openai_resume_parser.py
tests/: openai_resume_parser_test.py
